--- a/MobileAPP/package.json
+++ b/MobileAPP/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
+    "expo-barcode-scanner": "^12.7.0",
+    "expo-camera": "^13.6.0",
     "expo-clipboard": "^4.5.0",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
