--- a/MobileAPP/package.json
+++ b/MobileAPP/package.json
@@ -9,19 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
+    "base64-js": "^1.5.1",
+    "crypto-js": "^4.1.1",
     "expo": "~49.0.11",
-    "expo-barcode-scanner": "^12.7.0",
-    "expo-camera": "^13.6.0",
-    "expo-clipboard": "^4.5.0",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
+    "expo-clipboard": "~4.3.1",
+    "expo-file-system": "^15.6.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-get-random-values": "~1.9.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
