--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+**/.vscode/
+
+# desktop files and folder
+**/__pycache__/
+**/person_pictures/
+**/.pytest_cache/
+
+# mobile-app files and folder 
 **/node_modules/
 **/.expo/
 **/dist/
